Fixes: NB#277393 - Arabic texts are not aligned to the Right in MLabel
RevBy: Mike FABIAN

Details:

- CSS horizontal-alignment - add "left absolute" and "right absolute"
- MLabelView - set text alignment based on whether we wrap the text
  over multiple lines
- unit test for to check the text alignment
- fix eliding for wordwrapped strings in MLabel
- Includes unit test for eliding wordwrapped strings to
  prevent future regression

--- a/tests/ut_mlabel/ut_mlabel.css
+++ b/tests/ut_mlabel/ut_mlabel.css
@@ -58,3 +58,21 @@ MLabelStyle#lineCount2 {
 MLabelStyle#lineCount3 {
     preferred-line-count: 3;
 }
+MLabelStyle#leftAligned {
+    horizontal-alignment: left;
+}
+MLabelStyle#rightAligned {
+    horizontal-alignment: right;
+}
+MLabelStyle#leftAbsoluteAligned1 {
+    horizontal-alignment: absolute left;
+}
+MLabelStyle#leftAbsoluteAligned2 {
+    horizontal-alignment: left absolute;
+}
+MLabelStyle#rightAbsoluteAligned1 {
+    horizontal-alignment: absolute right;
+}
+MLabelStyle#rightAbsoluteAligned2 {
+    horizontal-alignment: right absolute;
+}
